# lerobot-openarm-workbench

./: .env.example  .gitignore  README.md  pyproject.toml  run_xlerobot_workbench_8093.sh
.workspace/: PRD_XLeRobot_SO101_v3.md
config/: ready_path.example.json  ready_path_0618.json  ready_path_vla_warmstart.json  ready_path_vla_warmstart_6wp.json  ready_path_xlerobot_so101.json  workbench_config.example.json  workbench_config.xlerobot_so101.json
docs/: DATA_CLOSED_LOOP_DESIGN.md  IMPLEMENTATION_SCHEDULE.md  ROADMAP.md  SO101_COLLECTION_WORKBENCH_MANUAL.md  SOP_COLLECT_AND_EXPORT.md  SOP_MIGRATE_MACHINE.md  SOP_XLEROBOT_SO101.md
scripts/: export_accepted_episodes.py  export_training_package.py  move_to_ready.py  new_collection_dataset.py  probe_devices.py  probe_xlerobot_so101.py  report_collection_batch.py  reset_realsense.py  start_with_can.sh  start_workbench.py
tests/: test_collection_report.py  test_command_semantics.py  test_config_semantics.py  test_controller_episode_finalize.py  test_dataset_has_pending_frames.py  test_dataset_manifest.py  test_dataset_schema_gate.py  test_export_schema_gate.py  test_label_acceptance.py  test_lerobot_compat.py  test_move_to_ready_waypoints.py  test_new_collection_dataset.py  test_openarm_mini_compat.py  test_ready_controller.py  test_safety.py  test_server_dataset_api.py  test_start_script.py  test_static_assets.py  test_timing.py  test_training_export.py  test_xlerobot_action_schema.py  test_xlerobot_config_semantics.py  test_xlerobot_mapping_safety.py  test_xlerobot_metadata_chain.py  test_xlerobot_probe.py
(+30 files in other folders)
